<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:fab="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingTop="35dp"
	android:paddingRight="30dp"
	android:paddingLeft="30dp">

	<TextView
		android:layout_height="wrap_content"
		android:text="@string/login_env"
		android:id="@+id/log"
		android:textIsSelectable="true"
		android:layout_width="match_parent"/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_centerVertical="true"
		android:gravity="bottom"
		android:id="@+id/activitymainLinearLayout1">

		<FrameLayout
			android:id="@+id/username_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

			<EditText
				android:id="@+id/username"
				android:layout_width="match_parent"
				android:layout_height="45dp"
				android:hint="@string/login_account"
				android:inputType="text"
				android:background="@drawable/control_button">

			</EditText>

			<ImageButton
				android:id="@+id/dropdown_button"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_marginRight="5dip"
				android:layout_gravity="right|center_vertical"
				android:background="@drawable/drop"
				android:contentDescription="@string/app_name"
				android:alpha="0.5"/>

		</FrameLayout>

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:hint="@string/login_password"
			android:inputType="textPassword"
			android:background="@drawable/control_button"/>

		<CheckBox
			android:id="@+id/remember"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/login_checkbox"
			android:textAppearance="@android:style/TextAppearance.Small"
			android:textColor="#716b60"/>

		<Button
			android:id="@+id/login"
			android:layout_width="match_parent"
			android:layout_height="75dp"
			android:layout_marginTop="19dp"
			android:background="@drawable/btn_green"
			android:textColor="#FFFFFFFF"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="50dp">

			<Button
				android:id="@+id/newacc"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/login_new"
				android:layout_weight="1.0"
				android:background="@drawable/btn_blue"
				android:textColor="#FFFFFFFF"/>

			<Button
				android:id="@+id/offline"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/login_offline"
				android:background="@drawable/btn_blue"
				android:textColor="#FFFFFFFF"/>

		</LinearLayout>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/msg"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="15dp"
			android:visibility="gone"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/msg2"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="15dp"
			android:visibility="gone"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/msg0"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="15dp"
			android:visibility="gone"/>

	</LinearLayout>

	<TextView
		android:id="@+id/login_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_title"
		android:textColor="#716b60"
		android:textSize="30sp"
		android:layout_centerVertical="false"
		android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true"
		android:layout_marginTop="50dp"
		android:layout_alignLeft="@id/activitymainLinearLayout1"/>

</RelativeLayout>

