<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    android:background="@color/material_background">

    <TextView
        style="@style/TextStyleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/api_title"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/home_choose_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/api_mojang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@color/empty"
                    android:text="@string/api_mojang"
                    android:fontFamily="@font/sans"/>

                <RadioButton
                    android:id="@+id/api_microsoft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@color/empty"
                    android:text="@string/api_ms"
                    android:fontFamily="@font/sans"/>

                <RadioButton
                    android:id="@+id/api_3rd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@color/empty"
                    android:text="@string/api_3rd"
                    android:fontFamily="@font/sans"/>

            </RadioGroup>

            <TextView
                style="@style/TextStyleSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_main_msg_app"
                android:drawablePadding="5dp"
                android:paddingStart="4dp"
                android:text="@string/api_action"
                android:textSize="14sp"
                android:fontFamily="@font/sans"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/api_lay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/custom_api_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="API URL"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textIsSelectable="true"
                    style="@style/TextStyleMain"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/custom_api_web_open_dialog"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/home_open_api_btn_text"
                app:icon="@drawable/ic_link_open"
                android:fontFamily="@font/sans"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/custom_api_web_open_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/home_open_register_btn_text"
                app:icon="@drawable/ic_link_open"
                android:fontFamily="@font/sans"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/custom_api_web_open_mojang"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/home_open_mojang_btn_text"
                app:icon="@drawable/ic_link_open"
                android:fontFamily="@font/sans"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/custom_api_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:fontFamily="@font/sans"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/custom_api_ok"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:fontFamily="@font/sans"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>