<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:background="@color/material_background">

    <TextView
        style="@style/TextStyleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_web_url_title"
        android:textSize="20sp"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/api_web_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_edit_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_web_url"
            android:fontFamily="@font/sans"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/custom_web_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/sans"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/custom_web_ok"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_web_go"
            android:fontFamily="@font/sans"/>

    </LinearLayout>

</LinearLayout>